--- a/node_mysql/views/home.handlebars
+++ b/node_mysql/views/home.handlebars
@@ -1,5 +1,5 @@
 <h1>Cadastre o seu livro:</h1>
-<form class="form" action="/books/searchbooks" method="POST">
+<form class="form" action="/books/insertbook" method="POST">
   <div class="form-control">
     <label for="title">Título:</label>
     <input type="text" name="title" placeholder="Título do livro">
