--- a/node_sequelize/public/css/styles.css
+++ b/node_sequelize/public/css/styles.css
@@ -102,3 +102,36 @@ h1 {
   border-color: #721c24;
   color: #721c24;
 }
+
+.address-container {
+  max-width: 1000px;
+  margin: 1em auto;
+  padding-top: 1em;
+  border-top: 1px solid #ccc;
+}
+
+.address-container h2 {
+  margin-bottom: 1em;
+}
+
+.address-container form {
+  width: 300px;
+}
+
+.address-list {
+  margin-top: 1em;
+  padding-top: 1em;
+  border-top: 1px solid #ccc;
+  padding-bottom: 200px;
+}
+
+.address-list div {
+  display: flex;
+  margin-bottom: 1em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #ddd;
+}
+
+.address-list form {
+  margin-left: 1em;
+}
