--- a/node_sequelize/views/home.handlebars
+++ b/node_sequelize/views/home.handlebars
@@ -6,9 +6,9 @@
       <p>{{this.occupation}}</p>
       <div class="actions">
         <a href="/users/{{this.id}}" class="details-btn">Ver detalhes</a>
+        <a href="/users/edit/{{this.id}}" class="details-btn">Editar</a>
         <form action="/user/delete/{{this.id}}" method="POST">
           <input type="submit" value="Excluir" class="delete-btn">
-        </form>
       </div>
     </div>
   {{/each}}
